CollegeCanteen/build_log_manga_theme.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:packageDebugResources
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:mergeDebugResources
> Task :app:mergeDebugJavaResource UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\LoginActivity.java:44: error: cannot find symbol
        emailInput = findViewById(R.id.emailInput);
                                      ^
  symbol:   variable emailInput
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\LoginActivity.java:45: error: cannot find symbol
        passwordInput = findViewById(R.id.passwordInput);
                                         ^
  symbol:   variable passwordInput
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\LoginActivity.java:46: error: cannot find symbol
        loginButton = findViewById(R.id.loginButton);
                                       ^
  symbol:   variable loginButton
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\LoginActivity.java:47: error: cannot find symbol
        registerLink = findViewById(R.id.registerLink);
                                        ^
  symbol:   variable registerLink
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OtpVerificationActivity.java:29: error: cannot find symbol
        setContentView(R.layout.activity_otp);
                               ^
  symbol:   variable activity_otp
  location: class layout
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OtpVerificationActivity.java:31: error: cannot find symbol
        etOtp = findViewById(R.id.etOtp);
                                 ^
  symbol:   variable etOtp
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OtpVerificationActivity.java:32: error: cannot find symbol
        btnVerify = findViewById(R.id.btnVerify);
                                     ^
  symbol:   variable btnVerify
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OtpVerificationActivity.java:33: error: cannot find symbol
        tvOtpInfo = findViewById(R.id.tvOtpInfo);
                                     ^
  symbol:   variable tvOtpInfo
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\RegisterActivity.java:32: error: cannot find symbol
        etRollNo = findViewById(R.id.etRollNo);
                                    ^
  symbol:   variable etRollNo
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\RegisterActivity.java:33: error: cannot find symbol
        etEmail = findViewById(R.id.etEmailReg);
                                   ^
  symbol:   variable etEmailReg
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\RegisterActivity.java:34: error: cannot find symbol
        etMobile = findViewById(R.id.etMobile);
                                    ^
  symbol:   variable etMobile
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\RegisterActivity.java:35: error: cannot find symbol
        etPassword = findViewById(R.id.etPasswordReg);
                                      ^
  symbol:   variable etPasswordReg
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\RegisterActivity.java:37: error: cannot find symbol
        tvLoginLink = findViewById(R.id.tvLoginLink);
                                       ^
  symbol:   variable tvLoginLink
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:31: error: cannot find symbol
        View view = LayoutInflater.from(parent.getContext()).inflate(R.layout.item_order_staff, parent, false);
                                                                             ^
  symbol:   variable item_order_staff
  location: class layout
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:76: error: cannot find symbol
            tvOrderTime = itemView.findViewById(R.id.tvOrderTime);
                                                    ^
  symbol:   variable tvOrderTime
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:77: error: cannot find symbol
            tvTotal = itemView.findViewById(R.id.tvTotal);
                                                ^
  symbol:   variable tvTotal
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:78: error: cannot find symbol
            tvStatus = itemView.findViewById(R.id.tvStatus);
                                                 ^
  symbol:   variable tvStatus
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:79: error: cannot find symbol
            btnPreparing = itemView.findViewById(R.id.btnPreparing);
                                                     ^
  symbol:   variable btnPreparing
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:80: error: cannot find symbol
            btnReady = itemView.findViewById(R.id.btnReady);
                                                 ^
  symbol:   variable btnReady
  location: class id
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\StaffOrderAdapter.java:81: error: cannot find symbol
            btnCompleted = itemView.findViewById(R.id.btnCompleted);
                                                     ^
  symbol:   variable btnCompleted
  location: class id
Note: C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OrderHistoryAdapter.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
20 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.10/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
26 actionable tasks: 9 executed, 17 up-to-date
